# kopete-thinklight

./: CMakeLists.txt  CREDITS  INSTALL
src/: CMakeLists.txt  Messages.sh  kopete_thinklight.desktop  kopete_thinklight.kcfg  kopete_thinklight.kcfgc  kopete_thinklight_fixpermissions.cpp  kopete_thinklight_preferences.desktop  thinklightplugin.cpp  thinklightplugin.h  thinklightpreferences.cpp  thinklightpreferences.h  thinklightpreferencesui.ui
